tests/neg-custom-args/captures/leak-problem-2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leak-problem-2.scala:8:8 ---------------------------------
8 |  = race(Seq(src1, src2)) // error
  |    ^^^^^^^^^^^^^^^^^^^^^
  |    Found:    Source[box T^?]^{src1, src2}
  |    Required: Source[T]
  |
  | longer explanation available when compiling with `-explain`
